--- a/app/templates/department_new.html
+++ b/app/templates/department_new.html
@@ -1,14 +1,9 @@
-{% extends "base.html" %}
-
-{% block content %}
 <h1> Add New Department </h1>
 
-<form method='POST', action="{{ url_for('add_department') }}">
+<form method='POST', action="{{ url_for('departments') }}">
     {{ form.hidden_tag() }}
     <p>
         {{ form.name.label }} {{ form.name(size=40) }}
     </p>
     <p> {{ form.submit() }} </p>
 </form>
-
-{% endblock %}
